--- a/webenv/smartbox/smartboxWeb/templates/smartboxWeb/data.html
+++ b/webenv/smartbox/smartboxWeb/templates/smartboxWeb/data.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-    <title>SmartBox - Login</title>    
+    <title>SmartBox - Data</title>    
     
     <!-- Bootstrap core CSS -->
     <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -31,17 +31,6 @@
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Technical</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Buy Now</a>
-            </li>
-          </ul>
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
@@ -56,9 +45,17 @@
     <!-- Page -->
     <header class="masthead">
       <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-lg-12 my-auto">
-                Data Page
+        <div class="row" style="height: 30%">
+            <div class="col-lg-12 my-auto" align="center">
+                <h1>You have mail to collect</h1>
+            </div>  
+        </div>  
+        <div class="row">
+            <div class="col-lg-6 my-auto">
+                <p>Mail last delivered: {{ last_delivery_time }}</p>
+            </div>
+            <div class="col-lg-6 my-auto" align="right">
+                <p>Mail last collected: {{ last_collection_time }}</p>
             </div>
         </div>
       </div>
